--- a/index.html
+++ b/index.html
@@ -4,6 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="logo">
+        <img src="logo.png" alt="Logo" />
+        <form>
+          <input type="text" placeholder="Search with something..." />
+          <button><i class="fa-solid fa-magnifying-glass"></button>
+        </form>
+        <form>
+          <button>Login</button>
+          <button>Register</button>
+        </form>
+      </div>
+    
+      <div class="nav">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </header>
+  </body>
 </html>
