--- a/index.html
+++ b/index.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
-  </head>
-  <body>
-    <header>
-      <div class="logo">
-        <img src="logo.png" alt="Logo" />
-        <form>
-          <input type="text" placeholder="Search with something..." />
-          <button><i class="fa-solid fa-magnifying-glass"></button>
-        </form>
-        <form>
-          <button>Login</button>
-          <button>Register</button>
-        </form>
-      </div>
-    
-      <div class="nav">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-      </div>
-    </header>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="/WebDev/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+ 
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <h1>Welcome to My Website</h1>
+  <p>This is a sample paragraph to demonstrate the HTML structure.</p>
+  <footer>
+  <p>Footer Content</p>
+</footer>
+</body>
+
 </html>
