--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="/WebDev/style.css">
+  <title>MOCK Test</title>
+  <link rel="stylesheet" href="/WebDev/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
  
 </head>
 <body>
   <header>
-    <nav>
+    <div class="exam-links">
+      <ul>
+        <li><a href="#">IIT</a></li>
+        <li><a href="#">SSC</a></li>
+        <li><a href="#">BANK</a></li>
+        <li><a href="#">RAILWAYS</a></li>
+      </ul>
+    </div>
+    <nav class="contact">
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
@@ -18,8 +26,10 @@
       </ul>
     </nav>
   </header>
-  <h1>Welcome to My Website</h1>
-  <p>This is a sample paragraph to demonstrate the HTML structure.</p>
+  <div class="main">
+    <p>This is a sample paragraph to demonstrate the HTML structure.</p>
+    <h1>Welcome to My Website</h1>
+  </div>
   <footer>
   <p>Footer Content</p>
 </footer>
